# RayTracing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DebugTime.cpp  DebugTime.h  GUI.cpp  GUI.h  LICENSE  Object3D.cpp  Object3D.h  Point3D.cpp  Point3D.h  README.md  RayTracing.cpp  RayTracing.h  RayTracing.pro  Timestamp.h  Transfo.cpp  Transfo.h  bugs.md  bugs.txt  equations.txt  fenetre.cpp  fenetre.h  main.cpp  map3D.cpp  map3D.h  ressourpack.qrc
3DObject/: 3DGeometry.cpp  3DGeometry.h  Geometry3D.cpp  Geometry3D.h  Object3D.cpp  Object3D.h  Point3D.cpp  Point3D.h  Pos3D.cpp  Pos3D.h  World3D.cpp  World3D.h  maths3D.h
shaders/: compute_shader.cl
src/: DebugTime.cpp  DebugTime.h  RayTracing.rc  main.cpp
src/3D/: Entity.cpp  Entity.h  Geometry3D.cpp  Geometry3D.h  Object3D.cpp  Object3D.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  Pos3D.cpp  Pos3D.h  Solid.cpp  Solid.h  maths3D.h
src/GUI/: GUI.cpp  GUI.h  fenetre.cpp  fenetre.h  winapi.h
src/Qt_compat/: Image.cpp  Image.h  QColor.h  QImage  QImage.h  QPixmap  QPixmap.h  QSize  QSize.cpp  QSize.h  Thread.cpp  Timer.h
src/RayTracing/: ColorLight.cpp  ColorLight.h  GPUCalls.cpp  GPUCalls.h  PixScreen.cpp  PixScreen.h  Ray.cpp  Ray.h  RayImage.cpp  RayImage.h  RayTracing.cpp  RayTracing.h  Ressources.cpp  Ressources.h  Transfo.cpp  Transfo.h  Worker.cpp  Worker.h
src/World/: Timestamp.cpp  Timestamp.h  World3D.cpp  World3D.h  map3D.cpp  map3D.h
src/utils/: ComputeShader.cpp  ComputeShader.h  Image.h  QFile.h  Thread.cpp  Thread.h  Timer.h  global.h
tests/: RayTracing_test.pro  equations.txt
tests/speed/: 3Dspeedtest.pro  README.md  geometryTest.cpp  main.cpp  pointTest.cpp  posTest.cpp  speeddebug.cpp
tests/trigo/: trigo.cpp  trigo.pro  trigo_generator.cpp
